--- a/app/assets/stylesheets/jqx.summer.css.scss
+++ b/app/assets/stylesheets/jqx.summer.css.scss
@@ -16,3 +16,66 @@
 .jqx-scrollbar-summer .jqx-icon-arrow-down-selected-summer, .jqx-scrollbar-summer .jqx-icon-arrow-down-hover-summer{background-image:image-url('icon-down.png'); background-repeat:no-repeat; background-position:center;}
 .jqx-scrollbar-summer .jqx-icon-arrow-left-selected-summer, .jqx-scrollbar-summer .jqx-icon-arrow-left-hover-summer{background-image:image-url('icon-left.png'); background-repeat:no-repeat; background-position:center;}
 .jqx-scrollbar-summer .jqx-icon-arrow-right-selected-summer, .jqx-scrollbar-summer .jqx-icon-arrow-right-hover-summer{background-image:image-url('icon-right.png');background-repeat:no-repeat; background-position:center;}
+.jqx-grid-cell-summer.jqx-grid-cell-selected-summer>.jqx-grid-group-expand-summer,
+.jqx-grid-cell-summer.jqx-grid-cell-hover-summer>.jqx-grid-group-expand-summer {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-summer.jqx-grid-cell-selected-summer>.jqx-grid-group-collapse-summer,
+.jqx-grid-cell-summer.jqx-grid-cell-hover-summer>.jqx-grid-group-collapse-summer {
+    background-image: image-url('icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-summer.jqx-grid-cell-selected-summer>.jqx-grid-group-collapse-rtl-summer,
+.jqx-grid-cell-summer.jqx-grid-cell-hover-summer>.jqx-grid-group-collapse-rtl-summer {
+    background-image: image-url('icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-summer.jqx-grid-cell-selected-summer>.jqx-grid-group-expand-rtl-summer,
+.jqx-grid-cell-summer.jqx-grid-cell-hover-summer>.jqx-grid-group-expand-rtl-summer {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-summer
+{
+    background-image: image-url('icon-first.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-summer
+{
+    background-image: image-url('icon-last.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-hover-summer
+{
+    background-image: image-url('icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-hover-summer
+{
+    background-image: image-url('icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-selected-summer
+{
+    background-image: image-url('icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-selected-summer
+{
+    background-image: image-url('icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-calendar-hover-summer, .jqx-icon-calendar-pressed-summer {
+    background-image: image-url('icon-calendar-white.png');
+}
