--- a/app/assets/stylesheets/jqx.darkblue.css.scss
+++ b/app/assets/stylesheets/jqx.darkblue.css.scss
@@ -2,9 +2,8 @@
 .jqx-widget-darkblue{border-color:#004a73}
 .jqx-widget-content-darkblue{color:#004a73; border-color:#004a73}
 .jqx-fill-state-normal-darkblue, .jqx-widget-header-darkblue, .jqx-menu-vertical-darkblue{color: #fff; border-color: #004a73; background-color:#449bca; background-image:-webkit-gradient(linear,0 0,0 100%,from(#3c91c2),to(#449bca));  background-image:-moz-linear-gradient(top,#3c91c2,#449bca);  background-image:-o-linear-gradient(top,#3c91c2,#449bca)}
-.jqx-fill-state-hover-darkblue{background-color: #2f7097; background-image: none; border-color:#004a73; color:#fff}
-.jqx-fill-state-pressed-darkblue, .jqx-menu-item-top-hover-darkblue{background-color: #004a73; background-image: none; border-color:#004a73; color:#fff}
-/*checkbox images, grid cells*/
+.jqx-grid-cell-sort-darkblue, .jqx-grid-cell-filter-darkblue, .jqx-grid-cell-pinned-darkblue{color: #000; background-color:#deedf5}
+.jqx-grid-cell-alt-darkblue, .jqx-grid-cell-sort-alt-darkblue, .jqx-grid-cell-filter-alt-darkblue{color: #000; background-color:#deedf5}
 .jqx-checkbox-check-checked-darkblue{background:transparent image-url('check_white.png') left top no-repeat}
 .jqx-checkbox-check-indeterminate-darkblue{background:transparent image-url('check_indeterminate_white.png') left top no-repeat}
 .jqx-grid-darkblue, .jqx-grid-header-darkblue, .jqx-grid-cell-darkblue{border-color:#60aad2}
@@ -13,18 +12,113 @@
 .jqx-widget-darkblue .jqx-grid-column-header-darkblue{border-color:#449bca}
 .jqx-grid-bottomright-darkblue, .jqx-panel-bottomright-darkblue, .jqx-listbox-bottomright-darkblue{   background-color:#449bca}
 .jqx-widget-darkblue .jqx-grid-column-menubutton-darkblue, .jqx-menu-vertical-darkblue{background-color:#0a73a7;border-color:#0a73a7}
- .jqx-grid-selectionarea-darkblue{background-color:#60aad2;border:1px solid #60aad2; opacity:0.5}
 .jqx-grid-group-cell-darkblue{border-color:#60aad2; background-color:#fff}
-.jqx-grid-cell-sort-darkblue, .jqx-grid-cell-filter-darkblue, .jqx-grid-cell-pinned-darkblue{background-color:#deedf5}
-.jqx-grid-cell-alt-darkblue, .jqx-grid-cell-sort-alt-darkblue, .jqx-grid-cell-filter-alt-darkblue{background-color:#deedf5}
-.jqx-grid-cell-selected-darkblue{background-color:#cee4f0 !important; color:#003451 !important;}
-.jqx-grid-cell-hover-darkblue{background-color:#eaf8ff !important; color:#003451 !important;}
+.jqx-fill-state-hover-darkblue{background: #2f7097; background-image: none; border-color:#004a73; color:#fff}
+.jqx-fill-state-pressed-darkblue, .jqx-menu-item-top-hover-darkblue{background: #004a73; background-image: none; border-color:#004a73; color:#fff}
+ .jqx-grid-selectionarea-darkblue{background-color:#60aad2;border:1px solid #60aad2; opacity:0.5}
 .jqx-scrollbar-state-normal-darkblue{background-color:#449bca; border:1px solid #449bca;}
 .jqx-tabs-title-selected-bottom-darkblue, .jqx-tabs-selection-tracker-bottom-darkblue, .jqx-tabs-title-selected-top-darkblue, .jqx-tabs-selection-tracker-top-darkblue{color: #ffffff; border-color:#004a73; border-bottom:1px solid #004a73; background:#004a73}
 
 /*icons*/
 .jqx-grid-column-sortascbutton-darkblue, .jqx-expander-arrow-bottom-darkblue, .jqx-window-collapse-button-darkblue, .jqx-menu-item-arrow-up-darkblue, .jqx-menu-item-arrow-up-selected-darkblue, .jqx-menu-item-arrow-top-up-darkblue, .jqx-icon-arrow-up-darkblue, .jqx-icon-arrow-up-hover-darkblue, .jqx-icon-arrow-up-selected-darkblue{background-image:image-url('icon-up-white.png');background-repeat:no-repeat;background-position:center}
 .jqx-grid-column-menubutton-darkblue, .jqx-grid-column-sortdescbutton-darkblue, .jqx-expander-arrow-top-darkblue, .jqx-window-collapse-button-collapsed-darkblue, .jqx-menu-item-arrow-down-darkblue, .jqx-menu-item-arrow-down-selected-darkblue, .jqx-menu-item-arrow-down-darkblue, .jqx-icon-arrow-down-darkblue, .jqx-icon-arrow-down-hover-darkblue, .jqx-icon-arrow-down-selected-darkblue{background-image:image-url('icon-down-white.png');background-repeat:no-repeat;background-position:center}
-.jqx-tabs-arrow-left-darkblue, .jqx-menu-item-arrow-left-selected-darkblue, .jqx-menu-item-arrow-top-left-darkblue, .jqx-icon-arrow-left-darkblue, .jqx-icon-arrow-down-left-darkblue, .jqx-icon-arrow-left-selected-darkblue{background-image:image-url('icon-left-white.png');background-repeat:no-repeat;background-position:center}
-.jqx-tabs-arrow-right-darkblue, .jqx-menu-item-arrow-right-selected-darkblue, .jqx-menu-item-arrow-top-right-darkblue, .jqx-icon-arrow-right-darkblue, .jqx-icon-arrow-right-hover-darkblue, .jqx-icon-arrow-right-selected-darkblue{background-image:image-url('icon-right-white.png');background-repeat:no-repeat;background-position:center}
+
+.jqx-icon-arrow-left-darkblue{background-image:image-url('icon-left-white.png'); background-repeat:no-repeat; background-position:center}
+.jqx-icon-arrow-right-darkblue{background-image:image-url('icon-right-white.png'); background-repeat:no-repeat; background-position:center}
+.jqx-menu-item-arrow-left-darkblue{background-image:image-url('icon-left.png'); background-repeat:no-repeat; background-position:center}
+.jqx-menu-item-arrow-right-darkblue{background-image:image-url('icon-right.png'); background-repeat:no-repeat; background-position:center}
+
+.jqx-tabs-arrow-left-darkblue, .jqx-menu-item-arrow-left-selected-darkblue, .jqx-menu-item-arrow-top-left-darkblue, .jqx-icon-arrow-down-left-darkblue, .jqx-icon-arrow-left-selected-darkblue{background-image:image-url('icon-left-white.png');background-repeat:no-repeat;background-position:center}
+.jqx-tabs-arrow-right-darkblue, .jqx-menu-item-arrow-right-selected-darkblue, .jqx-menu-item-arrow-top-right-darkblue, .jqx-icon-arrow-right-hover-darkblue, .jqx-icon-arrow-right-selected-darkblue{background-image:image-url('icon-right-white.png');background-repeat:no-repeat;background-position:center}
 .jqx-window-close-button-darkblue, .jqx-icon-close-darkblue, .jqx-tabs-close-button-darkblue, .jqx-tabs-close-button-hover-darkblue, .jqx-tabs-close-button-selected-darkblue{background-image:image-url('close_white.png');  background-repeat:no-repeat;  background-position:center}
+.jqx-icon-arrow-first-darkblue
+{
+    background-image: image-url('icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-darkblue
+{
+    background-image: image-url('icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-search-darkblue
+{
+    background-image: image-url('search_white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-calendar-darkblue, .jqx-icon-calendar-hover-darkblue, .jqx-icon-calendar-pressed-darkblue {
+    background-image: image-url('icon-calendar-white.png');
+}
+.jqx-icon-delete-darkblue
+{
+    background-image: image-url('icon-delete-white.png');
+}
+.jqx-icon-edit-darkblue
+{
+    background-image: image-url('icon-edit-white.png');
+}
+.jqx-icon-save-darkblue
+{
+    background-image: image-url('icon-save-white.png');
+}
+.jqx-icon-cancel-darkblue
+{
+    background-image: image-url('icon-cancel-white.png');
+}
+.jqx-icon-search-darkblue
+{
+    background-image: image-url('search_white.png');
+}
+.jqx-icon-plus-darkblue
+{
+    background-image: image-url('plus_white.png');
+}
+
+.jqx-grid-group-expand-darkblue, .jqx-grid-cell-darkblue>.jqx-grid-group-expand-darkblue {
+    background-image: image-url('icon-down.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-group-collapse-darkblue, .jqx-grid-cell-darkblue>.jqx-grid-group-collapse-darkblue {
+    background-image: image-url('icon-right.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-group-collapse-rtl-darkblue, .jqx-grid-cell-darkblue>.jqx-grid-group-collapse-rtl-darkblue {
+    background-image: image-url('icon-left.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-group-expand-rtl-darkblue, .jqx-grid-cell-darkblue>.jqx-grid-group-expand-rtl-darkblue {
+    background-image: image-url('icon-down.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.jqx-grid-cell-darkblue.jqx-grid-cell-selected-darkblue>.jqx-grid-group-expand-darkblue,
+.jqx-grid-cell-darkblue.jqx-grid-cell-hover-darkblue>.jqx-grid-group-expand-darkblue {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-darkblue.jqx-grid-cell-selected-darkblue>.jqx-grid-group-collapse-darkblue,
+.jqx-grid-cell-darkblue.jqx-grid-cell-hover-darkblue>.jqx-grid-group-collapse-darkblue {
+    background-image: image-url('icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-darkblue.jqx-grid-cell-selected-darkblue>.jqx-grid-group-collapse-rtl-darkblue,
+.jqx-grid-cell-darkblue.jqx-grid-cell-hover-darkblue>.jqx-grid-group-collapse-rtl-darkblue {
+    background-image: image-url('icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-darkblue.jqx-grid-cell-selected-darkblue>.jqx-grid-group-expand-rtl-darkblue,
+.jqx-grid-cell-darkblue.jqx-grid-cell-hover-darkblue>.jqx-grid-group-expand-rtl-darkblue {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
