--- a/app/assets/stylesheets/jqx.highcontrast.css.scss
+++ b/app/assets/stylesheets/jqx.highcontrast.css.scss
@@ -23,3 +23,96 @@
 .jqx-scrollbar-thumb-state-pressed-horizontal-highcontrast, .jqx-scrollbar-thumb-state-pressed-highcontrast {
     background: #fff;
 }
+.jqx-icon-arrow-up-hover-highcontrast, .jqx-icon-arrow-up-selected-highcontrast
+{
+    background-image: image-url('icon-up-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-down-hover-highcontrast, .jqx-icon-arrow-down-selected-highcontrast
+
+{
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-left-hover-highcontrast, .jqx-icon-arrow-left-selected-highcontrast
+{
+    background-image: image-url('icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-right-hover-highcontrast, .jqx-icon-arrow-right-selected-highcontrast
+{
+    background-image: image-url('icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-hover-highcontrast, .jqx-icon-arrow-last-selected-highcontrast
+{
+    background-image: image-url('icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-hover-highcontrast, .jqx-icon-arrow-last-selected-highcontrast
+{
+    background-image: image-url('icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-calendar-hover-highcontrast, .jqx-icon-calendar-pressed-highcontrast {
+    background-image: image-url('icon-calendar-white.png');
+}
+.jqx-grid-cell-highcontrast.jqx-grid-cell-selected-highcontrast>.jqx-grid-group-expand-highcontrast,
+.jqx-grid-cell-highcontrast.jqx-grid-cell-hover-highcontrast>.jqx-grid-group-expand-highcontrast {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-highcontrast.jqx-grid-cell-selected-highcontrast>.jqx-grid-group-collapse-highcontrast,
+.jqx-grid-cell-highcontrast.jqx-grid-cell-hover-highcontrast>.jqx-grid-group-collapse-highcontrast {
+    background-image: image-url('icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-highcontrast.jqx-grid-cell-selected-highcontrast>.jqx-grid-group-collapse-rtl-highcontrast,
+.jqx-grid-cell-highcontrast.jqx-grid-cell-hover-highcontrast>.jqx-grid-group-collapse-rtl-highcontrast {
+    background-image: image-url('icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-highcontrast.jqx-grid-cell-selected-highcontrast>.jqx-grid-group-expand-rtl-highcontrast,
+.jqx-grid-cell-highcontrast.jqx-grid-cell-hover-highcontrast>.jqx-grid-group-expand-rtl-highcontrast {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-menu-item-arrow-right-hover-highcontrast, .jqx-menu-item-arrow-right-selected-highcontrast{background-image:image-url('icon-right-white.png'); background-position:100% 50%; background-repeat:no-repeat}
+.jqx-menu-item-arrow-down-hover-highcontrast, .jqx-menu-item-arrow-down-selected-highcontrast{background-image:image-url('icon-down-white.png'); background-position:100% 50%; background-repeat:no-repeat}
+.jqx-menu-item-arrow-up-hover-highcontrast, .jqx-menu-item-arrow-up-selected-highcontrast{background-image:image-url('icon-up-white.png');background-position:100% 50%; background-repeat:no-repeat}
+.jqx-menu-item-arrow-left-hover-highcontrast, .jqx-menu-item-arrow-left-selected-highcontrast{background-image:image-url('icon-left-white.png'); background-position:0 50%; background-repeat:no-repeat}
+
+.jqx-icon-delete-highcontrast
+{
+    background-image: image-url('icon-delete-white.png');
+}
+.jqx-icon-edit-highcontrast
+{
+    background-image: image-url('icon-edit-white.png');
+}
+.jqx-icon-save-highcontrast
+{
+    background-image: image-url('icon-save-white.png');
+}
+.jqx-icon-cancel-highcontrast
+{
+    background-image: image-url('icon-cancel-white.png');
+}
+.jqx-icon-search-highcontrast
+{
+    background-image: image-url('search_white.png');
+}
+.jqx-icon-plus-highcontrast
+{
+    background-image: image-url('plus_white.png');
+}
