--- a/app/assets/stylesheets/jqx.metro.css.scss
+++ b/app/assets/stylesheets/jqx.metro.css.scss
@@ -98,16 +98,16 @@
     border-color: #e5e5e5;
 }
 .jqx-window-header-metro, .jqx-input-button-header-metro, .jqx-calendar-title-header-metro, .jqx-grid-metro .jqx-widget-header-metro, .jqx-grid-header-metro, .jqx-grid-column-header-metro {font-size: 12px; font-family: 'segoe ui', arial, sans-serif; border-color: #e5e5e5; color: #767676; background: #f4f4f4;}
-.jqx-grid-column-menubutton {
+.jqx-grid-column-menubutton-metro {
     background-image: image-url('metro-icon-down.png');
  }
-.jqx-widget-metro .jqx-grid-cell-selected-metro, .jqx-grid-cell-selected-metro{ background-color:#1faeff !important; border-color: #1faeff !important; font-size: 13px;  color:#fff !important}
+.jqx-widget-metro .jqx-grid-cell-selected-metro, .jqx-grid-cell-selected-metro{ background-color:#1faeff; border-color: #1faeff; font-size: 12px;  color:#fff;}
 .jqx-grid-cell-hover-metro{ background-color:#dedede;}
  /*applied to the column's sort button when the sort order is ascending.*/
- .jqx-grid-column-sortascbutton {
+ .jqx-grid-column-sortascbutton-metro {
     background-image: image-url('metro-icon-up.png');
  }
-.jqx-grid-column-sortdescbutton {
+.jqx-grid-column-sortdescbutton-metro {
     background-image: image-url('metro-icon-down.png');
 }
 .jqx-checkbox-hover-metro {
@@ -235,4 +235,85 @@
 }
 
 .jqx-switchbutton-wrapper-metro {
+}
+.jqx-grid-cell-metro.jqx-grid-cell-selected-metro>.jqx-grid-group-expand-metro {
+    background-image: image-url('metro-icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-metro.jqx-grid-cell-selected-metro>.jqx-grid-group-collapse-metro{
+    background-image: image-url('metro-icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-metro.jqx-grid-cell-selected-metro>.jqx-grid-group-collapse-rtl-metro {
+    background-image: image-url('metro-icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-metro.jqx-grid-cell-selected-metro>.jqx-grid-group-expand-rtl-metro{
+    background-image: image-url('metro-icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-group-collapse-metro {
+    background-image: image-url('metro-icon-right.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+.jqx-grid-group-collapse-rtl-metro
+{
+    padding-right: 0px;
+    background-image: image-url('metro-icon-left.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+.jqx-grid-group-expand-metro, .jqx-grid-group-expand-rtl-metro
+{
+    padding-right: 0px;
+    background-image: image-url('metro-icon-down.png');
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+.jqx-icon-arrow-first-metro
+{
+    background-image: image-url('metro-icon-first.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-metro
+{
+    background-image: image-url('metro-icon-last.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-hover-metro
+{
+    background-image: image-url('metro-icon-first.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-hover-metro
+{
+    background-image: image-url('metro-icon-last.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-first-selected-metro
+{
+    background-image: image-url('metro-icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-selected-metro
+{
+    background-image: image-url('metro-icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-tree-grid-collapse-button-metro {
+    margin-top: 1px;
+}
+.jqx-icon-calendar-pressed-metro {
+    background-image: image-url('icon-calendar-white.png');
 }
