--- a/app/assets/stylesheets/jqx.orange.css.scss
+++ b/app/assets/stylesheets/jqx.orange.css.scss
@@ -59,10 +59,15 @@ border-color:#FBB34E; }
     border-color: #fff;
 }
 /*icons*/
+.jqx-icon-arrow-left-orange{background-image:image-url('icon-left-white.png'); background-repeat:no-repeat; background-position:center}
+.jqx-icon-arrow-right-orange{background-image:image-url('icon-right-white.png'); background-repeat:no-repeat; background-position:center}
+.jqx-menu-item-arrow-left-orange{background-image:image-url('icon-left.png'); background-repeat:no-repeat; background-position:center}
+.jqx-menu-item-arrow-right-orange{background-image:image-url('icon-right.png'); background-repeat:no-repeat; background-position:center}
+
 .jqx-grid-column-sortascbutton-orange, .jqx-expander-arrow-bottom-orange, .jqx-window-collapse-button-orange, .jqx-menu-item-arrow-up-orange, .jqx-menu-item-arrow-up-selected-orange, .jqx-menu-item-arrow-top-up-orange, .jqx-icon-arrow-up-orange, .jqx-icon-arrow-up-hover-orange, .jqx-icon-arrow-up-selected-orange{background-image:image-url('icon-up-white.png');background-repeat:no-repeat;background-position:center}
 .jqx-grid-column-menubutton-orange, .jqx-grid-column-sortdescbutton-orange, .jqx-expander-arrow-top-orange, .jqx-window-collapse-button-collapsed-orange, .jqx-menu-item-arrow-down-orange, .jqx-menu-item-arrow-down-selected-orange, .jqx-menu-item-arrow-down-orange, .jqx-icon-arrow-down-orange, .jqx-icon-arrow-down-hover-orange, .jqx-icon-arrow-down-selected-orange{background-image:image-url('icon-down-white.png');background-repeat:no-repeat;background-position:center}
-.jqx-tabs-arrow-left-orange, .jqx-menu-item-arrow-left-selected-orange, .jqx-menu-item-arrow-top-left-orange, .jqx-icon-arrow-left-orange, .jqx-icon-arrow-down-left-orange, .jqx-icon-arrow-left-selected-orange{background-image:image-url('icon-left-white.png');background-repeat:no-repeat;background-position:center}
-.jqx-tabs-arrow-right-orange, .jqx-menu-item-arrow-right-selected-orange, .jqx-menu-item-arrow-top-right-orange, .jqx-icon-arrow-right-orange, .jqx-icon-arrow-right-hover-orange, .jqx-icon-arrow-right-selected-orange{background-image:image-url('icon-right-white.png');background-repeat:no-repeat;background-position:center}
+.jqx-tabs-arrow-left-orange, .jqx-menu-item-arrow-left-selected-orange, .jqx-menu-item-arrow-top-left-orange, .jqx-icon-arrow-down-left-orange, .jqx-icon-arrow-left-selected-orange{background-image:image-url('icon-left-white.png');background-repeat:no-repeat;background-position:center}
+.jqx-tabs-arrow-right-orange, .jqx-menu-item-arrow-right-selected-orange, .jqx-menu-item-arrow-top-right-orange, .jqx-icon-arrow-right-hover-orange, .jqx-icon-arrow-right-selected-orange{background-image:image-url('icon-right-white.png');background-repeat:no-repeat;background-position:center}
 .jqx-window-close-button-orange, .jqx-icon-close-orange, .jqx-tabs-close-button-orange, .jqx-tabs-close-button-hover-orange, .jqx-tabs-close-button-selected-orange{background-image:image-url('close_white.png');  background-repeat:no-repeat;  background-position:center}
 
 .jqx-scrollbar-thumb-state-normal-horizontal-orange{ background:#F9960A; border:1px solid #E48605}
@@ -71,3 +76,94 @@ border-color:#FBB34E; }
 .jqx-scrollbar-thumb-state-normal-orange{ background:#F9960A; border:1px solid #E48605;}
 .jqx-scrollbar-thumb-state-hover-orange{ background:#E48605; border:1px solid #E48605}
 .jqx-scrollbar-thumb-state-pressed-orange{ background:#111086; border:1px solid #070734}
+.jqx-icon-arrow-first-orange
+{
+    background-image: image-url('icon-first-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-arrow-last-orange
+{
+    background-image: image-url('icon-last-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.jqx-grid-cell-orange>.jqx-grid-group-expand-orange {
+    background-image: image-url('icon-down.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange>.jqx-grid-group-collapse-orange {
+    background-image: image-url('icon-right.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange>.jqx-grid-group-collapse-rtl-orange {
+    background-image: image-url('icon-left.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange>.jqx-grid-group-expand-rtl-orange {
+    background-image: image-url('icon-down.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.jqx-grid-cell-orange.jqx-grid-cell-selected-orange>.jqx-grid-group-expand-orange,
+.jqx-grid-cell-orange.jqx-grid-cell-hover-orange>.jqx-grid-group-expand-orange {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange.jqx-grid-cell-selected-orange>.jqx-grid-group-collapse-orange,
+.jqx-grid-cell-orange.jqx-grid-cell-hover-orange>.jqx-grid-group-collapse-orange {
+    background-image: image-url('icon-right-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange.jqx-grid-cell-selected-orange>.jqx-grid-group-collapse-rtl-orange,
+.jqx-grid-cell-orange.jqx-grid-cell-hover-orange>.jqx-grid-group-collapse-rtl-orange {
+    background-image: image-url('icon-left-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-grid-cell-orange.jqx-grid-cell-selected-orange>.jqx-grid-group-expand-rtl-orange,
+.jqx-grid-cell-orange.jqx-grid-cell-hover-orange>.jqx-grid-group-expand-rtl-orange {
+    background-image: image-url('icon-down-white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-search-orange
+{
+    background-image: image-url('search_white.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.jqx-icon-calendar-orange, .jqx-icon-calendar-hover-orange, .jqx-icon-calendar-pressed-orange {
+    background-image: image-url('icon-calendar-white.png');
+}
+.jqx-icon-delete-orange
+{
+    background-image: image-url('icon-delete-white.png');
+}
+.jqx-icon-edit-orange
+{
+    background-image: image-url('icon-edit-white.png');
+}
+.jqx-icon-save-orange
+{
+    background-image: image-url('icon-save-white.png');
+}
+.jqx-icon-cancel-orange
+{
+    background-image: image-url('icon-cancel-white.png');
+}
+.jqx-icon-search-orange
+{
+    background-image: image-url('search_white.png');
+}
+.jqx-icon-plus-orange
+{
+    background-image: image-url('plus_white.png');
+}
